--- a/ArithQuation.cabal
+++ b/ArithQuation.cabal
@@ -18,7 +18,7 @@ build-type:          Simple
 extra-source-files:  CHANGELOG.md
 
 library
-  exposed-modules:     BinaryTreeHs.BinTree
+  exposed-modules:     ArithQ
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.14 && <4.15
